--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,16 +1,35 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: #f3f3f3;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+        "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: #eff3f7;
 }
 
 .main-container {
     text-align: center;
-    width: 100%;
+    width: 50%;
     max-width: 1300px;
-    margin: 10px auto;
+    margin: 0px auto;
 }
 
 .main-card-container {
+    margin-top: 70px;
+}
+
+.main-card-above {
     margin-top: 100px;
+    background-color: white;
+}
+
+.main-card-under {
+    margin-top: 50px;
 }
 
 .main-input-container {
@@ -22,9 +41,13 @@ body {
 }
 
 .main-container .main-topic {
-    font-weight: "bold";
+    color: #6f6f79;
+    text-shadow: 2px 2px 3px #bbbbbb;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    display: inline;
+    font-weight: lighter;
     font-size: 40px;
-    margin-bottom: 20px;
 }
 .main-container .main-text1 {
     font-weight: "bold";
@@ -37,12 +60,13 @@ body {
 }
 
 .main-container .main-input {
-    margin: 30px;
-    width: 20%;
-    height: 40px;
-    font-size: 20px;
+    max-width: 1000px;
+    margin: 0px auto;
+    width: 400px;
+    margin-bottom: 20px;
+    background-color: #eff3f7;
 }
 
 .main-container .main-button {
-    margin: 30px;
+    margin: 20px;
 }
