--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,7 @@ body {
 
 .main-container {
     text-align: center;
-    width: 50%;
+    width: 35%;
     max-width: 1300px;
     margin: 0px auto;
 }
@@ -61,8 +61,9 @@ body {
 
 .main-container .main-input {
     max-width: 1000px;
+    min-width: 10px;
     margin: 0px auto;
-    width: 400px;
+    width: 400px auto;
     margin-bottom: 20px;
     background-color: #eff3f7;
 }
