--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,8 +14,9 @@ body {
 
 .main-container {
     text-align: center;
-    width: 35%;
-    max-width: 1300px;
+    width: 40%;
+    max-width: 1200px;
+    min-width: 560px;
     margin: 0px auto;
 }
 
@@ -63,7 +64,7 @@ body {
     max-width: 1000px;
     min-width: 10px;
     margin: 0px auto;
-    width: 400px auto;
+    width: 350px;
     margin-bottom: 20px;
     background-color: #eff3f7;
 }
